TA TUDO ERRADO DEU A MAIOR MERDA Q SE PODIA DAR MAS, NÃO COMITOU NADA MEU NESSA PORRA ANTES KRL EM