@@ -1,3 +1,4 @@
+// Local: src/main/java/com/bag/osmanager/config/SecurityConfig.java
 package com.bag.osmanager.config;
 
 import com.bag.osmanager.config.filter.JwtAuthFilter;
@@ -22,7 +23,9 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
+
+import static org.springframework.security.config.Customizer.withDefaults;
 
 @Configuration
 @EnableWebSecurity
@@ -37,7 +40,7 @@ public class SecurityConfig {
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
-
+    
     @Bean
     public AuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
@@ -54,21 +57,11 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
-            "http://localhost:5173",
-            "http://192.168.0.11:5173",
-            "http://192.168.56.1:5173"
-        ));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList(
-            "Authorization",
-            "Content-Type",
-            "Cache-Control",
-            "Access-Control-Request-Headers",
-            "Access-Control-Allow-Origin",
-            "Access-Control-Allow-Headers"
-        ));
+        configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://192.168.0.11:5173", "http://192.168.56.1:5173"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With"));
         configuration.setAllowCredentials(true);
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
@@ -77,22 +70,29 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .cors(withDefaults())
             .csrf(csrf -> csrf.disable())
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(authorize -> authorize
-                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // <-- LIBERA TODAS AS OPTIONS
+                // --- 👇👇 LINHA CRUCIAL ADICIONADA AQUI 👇👇 ---
+                // Permite todas as requisições de verificação (pre-flight) do CORS.
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                
+                // Suas regras públicas
                 .requestMatchers("/api/auth/**").permitAll()
-                .requestMatchers("/error").permitAll()
-                // Proteja os endpoints de LOCAIS conforme regra de negócio:
-                .requestMatchers(HttpMethod.POST, "/api/locais").hasAnyRole("ADMIN", "MECANICO")
+                .requestMatchers(HttpMethod.POST, "/api/funcionarios").permitAll()
+                
+                // O resto das suas regras de negócio
+                .requestMatchers(HttpMethod.POST, "/api/locais").hasAnyRole("ADMIN", "MECANICO", "LIDER")
                 .requestMatchers(HttpMethod.GET, "/api/locais").authenticated()
-                .requestMatchers(HttpMethod.PUT, "/api/locais/**").hasAnyRole("ADMIN", "MECANICO")
-                .requestMatchers(HttpMethod.DELETE, "/api/locais/**").hasAnyRole("ADMIN", "MECANICO")
-                .requestMatchers(HttpMethod.POST, "/api/funcionarios").hasRole("ADMIN")
-                .requestMatchers(HttpMethod.POST, "/api/equipamentos").hasAnyRole("ADMIN", "MECANICO")
+                .requestMatchers(HttpMethod.PUT, "/api/locais/**").hasAnyRole("ADMIN", "MECANICO", "LIDER")
+                .requestMatchers(HttpMethod.DELETE, "/api/locais/**").hasAnyRole("ADMIN", "MECANICO", "LIDER")
+                .requestMatchers(HttpMethod.POST, "/api/equipamentos").hasAnyRole("ADMIN", "MECANICO", "LIDER")
                 .requestMatchers(HttpMethod.POST, "/api/ordens-servico").authenticated()
                 .requestMatchers(HttpMethod.PUT, "/api/ordens-servico/*/status").hasAnyRole("ADMIN", "MECANICO", "ANALISTA_QC")
+                .requestMatchers(HttpMethod.PATCH, "/api/ordens-servico/*/ciencia-lider").hasRole("LIDER")
+                
+                // Qualquer outra requisição precisa de autenticação
                 .anyRequest().authenticated()
             )
             .authenticationProvider(authenticationProvider())
